Make sure profile is complete before trying to set skull texture
+ save profile name when making schematic, and force a name if the name is null or blank